fix econ-ark.org/materials table spacing
This commit fixes the spacing on the `/materials` page where the
'Abstract' column is overflowing and being hidden. This fix changes
allows the left-hand column 'Material' to allow both the title and the
tags to wrap.

--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -444,7 +444,7 @@ a.action-button {
     margin:0;
     font-size:0.9rem;
     display: inline-block;
-    white-space: nowrap;
+    white-space: wrap;
     @media (max-width: 1023px) {
       white-space: normal;
     }
@@ -483,11 +483,12 @@ a.action-button {
     margin:0.5rem 0 0 0;
     padding:0;
     display:flex;
+    flex-wrap: wrap;
     opacity: 0.7;
     //justify-content: flex-end;
     //flex-direction: column;
     li {
-      margin:0 0.25rem 0 0;
+      margin:0 0.25rem 0.25rem 0;
       font-size: 0.8rem;
       padding: 0.25rem 1rem 0.25rem 1rem;
       //min-width: 100px;
